force-app/main/default/objects/Batch_Log__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <label>Batch Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>