force-app/main/default/objects/Batch_Log__c/fields/Batch_Scope__c.field-meta.xml
<CustomField>
    <fullName>Batch_Scope__c</fullName>
    <label>Batch Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>