force-app/main/default/objects/Batch_Log__c/fields/Chunks_With_Errors__c.field-meta.xml
<CustomField>
    <fullName>Chunks_With_Errors__c</fullName>
    <label>Chunks With Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>