force-app/main/default/objects/Batch_Log__c/fields/Cron_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Cron_Trigger__c</fullName>
    <label>Cron Trigger</label>
    <type>DateTime</type>
</CustomField>