force-app/main/default/objects/Batch_Log__c/fields/DML_Type__c.field-meta.xml
<CustomField>
    <fullName>DML_Type__c</fullName>
    <label>DML Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>