force-app/main/default/objects/Batch_Log__c/fields/Items_in_Scope__c.field-meta.xml
<CustomField>
    <fullName>Items_in_Scope__c</fullName>
    <label>Items in Scope</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>