force-app/main/default/objects/Batch_Log__c/fields/Number_of_Errors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Errors__c</fullName>
    <label>Number of Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>