force-app/main/default/objects/Batch_Log__c/fields/Total_Batch_Chunks__c.field-meta.xml
<CustomField>
    <fullName>Total_Batch_Chunks__c</fullName>
    <label>Total Batch Chunks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>