force-app/main/default/objects/Batch_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Batch_Start_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Items_in_Scope__c</columns>
    <columns>Apex_Class_Name__c</columns>
    <columns>Stack_Trace__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>